# H_apps

./: README.md
apps/: .gitignore  Makefile.bench  apps.txt  bench-ingest.py  benchmark.py  benchmark.sh  benchmark_arm.sh  benchmark_gpu.sh  build-llvm-on-latedays.txt  conv.txt  conv_layer.csv  conv_layer.py  copy-bench.sh  fig1.py  fig7-ingest.py  fig7.py  fig7_6config_6.txt  fig7_at_6.txt  fig7_auto_6.txt  fig7_naive_6.txt  fig7_polymage_6.txt  fig7_ref_6.txt  fig8-ingest.py  fig8.csv  fig8.py  fig8_auto.txt  fig8_auto_gpu.txt  fig8_naive.txt  fig8_naive_gpu.txt  fig8_ref.txt  fig8_ref_gpu.txt  graph-bench.py  graph-schmoo.py  harris.csv  harris.py  input_size_var.txt  jrk.bash  laplacian.csv  laplacian.py  latedays-bench.sh  (+13 more)
apps/bilateral_grid/: Makefile  bilateral_grid.cpp  filter.cpp  test.sh  viz.sh
apps/blur/: Makefile  halide_blur.cpp  halide_blur_lower  halide_gen_blur.cpp  halide_sin_blur.cpp  nohup.out  run_tests.sh  run_tests_par.sh  run_tests_par8.sh  temp.out  test.cpp  test.out  test_man1  test_man2  test_man3  test_par.out
apps/camera_pipe/: .gitignore  Makefile  camera_pipe.cpp  process.cpp  test.sh
apps/conv_layer/: Makefile  conv_bench.cpp  layers.h  test.sh
apps/conv_layer_config_1/: .gitignore  Makefile
apps/conv_layer_config_2/: Makefile
apps/non_local_means/: CMakeLists.txt  Makefile  filter.cpp  non_local_means.cpp  non_local_means_andrew.cpp  non_local_means_dillon.cpp  test.sh
results/: blur_sweep_1t.txt  blur_sweep_1t_matmul_interference.txt  blur_sweep_1t_matmul_interference2x.txt  sin_blur_1T.txt  single_thread_sweep_blur.txt
(+97 files in other folders)
